[package]
name = "vsock-relay"
version = "1.0.1"
description = "Relays TCP connections from IPv4/IPv6 to vsock."
license = "MPL-2.0"
homepage = "https://github.com/brave-experiments/vsock-relay"
repository = "https://github.com/brave-experiments/vsock-relay"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
tokio-vsock = "0.4"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
mock-vsock = []
